--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-safe-action": "^7.10.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
